--- a/manifest-registration.yml
+++ b/manifest-registration.yml
@@ -1,6 +1,7 @@
 applications:
 - name: tracker-registration
   path: ./applications/registration-server/build/libs/registration-server.jar
+  host: registration-pal-ku-aa
   routes:
   - route: registration-pal-ku-aa.apps.chicken.pal.pivotal.io
   memory: 1G
