--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -51,9 +51,10 @@ resources:
   type: s3
   source:
     bucket: {{aws-bucket}}
-    regexp: pal-tracker/platform-(.*).jar
+    regexp: pal-tracker/platform(.*).jar
     access_key_id: {{aws-access-key-id}}
     secret_access_key: {{aws-secret-access-key}}
+
 
 - name: cf
   type: cf
